--- a/src/app/svg-edit/svg-edit.component.html
+++ b/src/app/svg-edit/svg-edit.component.html
@@ -73,13 +73,14 @@
             <mat-form-field *ngIf="singleSelectedObject">
                 <input matInput name="objname" [(ngModel)]="singleSelectedObject.label" placeholder="Object Name">
             </mat-form-field>
-            <mat-form-field *ngIf="singleSelectedObject | type:'Stairs'">
-                <mat-select [value]="singleSelectedObject.group" (change)="setStairsGroup($event)"
-                            placeholder="Connect stairs">
+            <mat-form-field *ngIf="(singleSelectedObject | type:'Stairs') || (singleSelectedObject | type:'Elevator')">
+                <mat-select [placeholder]="'Connect ' + (singleSelectedObject | type)" [value]="singleSelectedObject.group"
+                            (change)="setTeleporterGroup(singleSelectedObject, $event.value)">
                     <mat-option [value]="null">None</mat-option>
                     <mat-option [value]="undefined">New group</mat-option>
-                    <mat-option *ngFor="let stairsGroup of connectibleStairsGroups" [value]="stairsGroup.group">
-                        {{getStairsGroupDisplayName(stairsGroup)}}
+                    <mat-option *ngFor="let teleporterGroup of connectibleTeleporterGroups"
+                                [value]="teleporterGroup.group">
+                        {{getTeleporterGroupDisplayName(teleporterGroup)}}
                     </mat-option>
                 </mat-select>
             </mat-form-field>
@@ -157,6 +158,30 @@
                             <svg:text *ngIf="showLabels" text-anchor="middle"
                                       [attr.x]="stairs.center.x" [attr.y]="stairs.center.y + 20">
                                 {{stairs.label}}
+                            </svg:text>
+                        </svg:g>
+
+                        <svg:g *ngFor="let elevator of floor.elevators">
+                            <svg:rect
+                                    [attr.stroke]="selectedObjects.indexOf(elevator) !== -1 ? '#b71c1c' : '#afafaf'"
+                                    stroke-width="10" fill-opacity="0.5"
+                                    [attr.x]="elevator.center.x - 30" [attr.y]="elevator.center.y - 30"
+                                    width="60" height="60"/>
+                            <svg:line
+                                    [attr.stroke]="selectedObjects.indexOf(elevator) !== -1 ? '#b71c1c' : '#afafaf'"
+                                    stroke-width="5"
+                                    [attr.x1]="elevator.center.x - 30" [attr.y1]="elevator.center.y - 30"
+                                    [attr.x2]="elevator.center.x + 30" [attr.y2]="elevator.center.y + 30"/>
+                            <svg:line
+                                    [attr.stroke]="selectedObjects.indexOf(elevator) !== -1 ? '#b71c1c' : '#afafaf'"
+                                    stroke-width="5"
+                                    [attr.x1]="elevator.center.x + 30" [attr.y1]="elevator.center.y - 30"
+                                    [attr.x2]="elevator.center.x - 30" [attr.y2]="elevator.center.y + 30"/>
+                            <svg:circle [attr.cx]="elevator.center.x" [attr.cy]="elevator.center.y" r="4"
+                                        style="stroke: none; fill:#000000;"/>
+                            <svg:text *ngIf="showLabels" text-anchor="middle"
+                                      [attr.x]="elevator.center.x" [attr.y]="elevator.center.y + 20">
+                                {{elevator.label}}
                             </svg:text>
                         </svg:g>
 
