--- a/src/app/main/map-list.component.html
+++ b/src/app/main/map-list.component.html
@@ -5,7 +5,7 @@
         <mat-divider></mat-divider>
         <mat-list-item [routerLink]="['/editor', '' + map.id]">{{map.name}}</mat-list-item>
         </div>
-        <button class="fab" mat-fab [routerLink]="['/editor', '-1']" matTooltip="Create a new map">
+        <button class="fab" mat-fab [routerLink]="['/editor', '-1']" matTooltip="Create a new map" *ngIf="modelSvc.userInfo?.username">
             <mat-icon>add</mat-icon>
         </button>
     </mat-nav-list>
