--- a/src/app/svg-edit/svg-edit.component.html
+++ b/src/app/svg-edit/svg-edit.component.html
@@ -62,8 +62,8 @@
         </div>
         <div id="properties" *ngIf="editMode">
             <h2 class="mat-h2">{{(singleSelectedObject | type) || 'Floor'}} Properties</h2>
-            <mat-form-field *ngIf="floor && !singleSelectedObject">
-                <input matInput name="floorname" [(ngModel)]="floor.label" placeholder="Floor Name">
+            <mat-form-field *ngIf="currentFloor && !singleSelectedObject">
+                <input matInput name="floorname" [(ngModel)]="currentFloor.label" placeholder="Floor Name">
             </mat-form-field>
             <mat-form-field *ngIf="singleSelectedObject">
                 <input matInput name="objname" [(ngModel)]="singleSelectedObject.label" placeholder="Object Name">
@@ -106,7 +106,7 @@
                                width="2000"
                                height="2000" opacity="0.5" preserveAspectRatio="xMinYMin meet"/>
 
-                    <svg:g *ngIf="floor">
+                    <svg:g *ngIf="currentFloor">
                         <svg:defs>
                             <svg:marker id="circle" markerWidth="10" markerHeight="10" refX="5" refY="5"
                                         markerUnits="userSpaceOnUse">
@@ -119,13 +119,13 @@
                             </svg:marker>
                         </svg:defs>
 
-                        <svg:line *ngFor="let wall of floor.walls" stroke="black"
-                                  stroke-width="3" stroke-linecap="round"                        
+                        <svg:line *ngFor="let wall of currentFloor.walls" stroke="black"
+                                  stroke-width="3" stroke-linecap="round"
                                   [attr.x1]="wall.p1.x" [attr.y1]="wall.p1.y" [attr.x2]="wall.p2.x"
                                   [attr.y2]="wall.p2.y"
                                   marker-end="url(#circle)" marker-start="url(#circle)"/>
 
-                        <svg:g *ngFor="let portal of floor.portals">
+                        <svg:g *ngFor="let portal of currentFloor.portals">
                             <svg:line
                                     [attr.stroke]="getSelectableColor(portal)"
                                     stroke-width="10"
@@ -139,7 +139,7 @@
                             </svg:text>
                         </svg:g>
 
-                        <svg:g *ngFor="let stairs of floor.stairways">
+                        <svg:g *ngFor="let stairs of currentFloor.stairways">
                             <svg:line
                                     [attr.stroke]="getSelectableColor(stairs)"
                                     stroke-width="10" stroke-dasharray="2, 5"
@@ -169,7 +169,7 @@
                                     [attr.cx]="mouse.xs" [attr.cy]="mouse.ys" r="5" style="stroke:red; fill:none"/>
                     </svg:g>
 
-                    <text *ngIf="!floor" x="50%" y="50%" alignment-baseline="middle" text-anchor="middle"
+                    <text *ngIf="!currentFloor" x="50%" y="50%" alignment-baseline="middle" text-anchor="middle"
                           font-size="40">
                         Bitte warten...
                     </text>
@@ -190,19 +190,20 @@
             </div>
             <div id="floor-button-container">
                 <mat-button-toggle-group #group="matButtonToggleGroup" value="floors[0]">
-                    <mat-button-toggle *ngFor="let f of floors; let i = index" [class.mat-raised-button]="floor == f"
+                    <mat-button-toggle *ngFor="let f of floors; let i = index"
+                                       [class.mat-raised-button]="currentFloor == f"
                                        [class.search-result-floor]="f.searchResults.length"
                                        (click)="selectFloor(i)">
                         {{f.label || '?'}}
                     </mat-button-toggle>
                     <div id="floor-spacer"></div>
                     <button mat-raised-button color="primary" *ngIf="!editMode && hasWritePermission"
-                            (click)="switchToEditMode()" class="edit-button">
+                            [routerLink]="['/edit', urlMapIdString]" class="edit-button">
                         <mat-icon aria-label="Edit">edit</mat-icon>
                         <span>Edit mode</span>
                     </button>
                     <button mat-raised-button color="accent" *ngIf="editMode && hasWritePermission"
-                            (click)="switchToViewMode()" class="edit-button">
+                            [routerLink]="['/view', urlMapIdString]" class="edit-button">
                         <mat-icon aria-label="Edit">pageview</mat-icon>
                         <span>View mode</span>
                     </button>
@@ -214,19 +215,19 @@
                         <mat-icon>add_circle_outline</mat-icon>
                         New floor
                     </button>
-                    <button mat-button (click)="createFloor(floor)">
+                    <button mat-button (click)="createFloor(currentFloor)">
                         <mat-icon>control_point_duplicate</mat-icon>
                         Clone floor
                     </button>
-                    <button mat-button (click)="removeFloor(floor)">
+                    <button mat-button (click)="removeFloor(currentFloor)">
                         <mat-icon>remove_circle_outline</mat-icon>
                         Remove floor
                     </button>
-                    <button mat-button (click)="moveFloor(floor, 1)">
+                    <button mat-button (click)="moveFloor(currentFloor, 1)">
                         <mat-icon>vertical_align_top</mat-icon>
                         Move up
                     </button>
-                    <button mat-button (click)="moveFloor(floor, -1)">
+                    <button mat-button (click)="moveFloor(currentFloor, -1)">
                         <mat-icon>vertical_align_bottom</mat-icon>
                         Move down
                     </button>
