Update Travis (build prod, node version) and add security headers (meta tags)

--- a/src/app/map-page/subcomponents/side-search.component.html
+++ b/src/app/map-page/subcomponents/side-search.component.html
@@ -19,7 +19,7 @@
 <br>
 
 <mat-form-field>
-    <input matInput type="search" incremental name="search" [(ngModel)]="endQuery" (keyup)="search()"
+    <input matInput type="search" incremental name="search" [(ngModel)]="endQuery" (keyup)="search(endQuery)"
            placeholder="Endpoint..." (focus)="startpoint = false">
 </mat-form-field>
 
