Various bugfixes (related to guards, currentMap name in toolbar, ...)

--- a/src/app/map-page/subcomponents/side-properties.component.html
+++ b/src/app/map-page/subcomponents/side-properties.component.html
@@ -1,11 +1,11 @@
 <h2 class="mat-h2">{{(singleSelectedObject | type) || 'Floor'}} Properties</h2>
 
 <mat-form-field *ngIf="currentFloor && !singleSelectedObject">
-    <input matInput name="floorname" [(ngModel)]="currentFloor.label" placeholder="Floor Name">
+    <input matInput name="floorname" [(ngModel)]="currentFloor.label" (change)="markDirty()" placeholder="Floor Name">
 </mat-form-field>
 
 <mat-form-field *ngIf="singleSelectedObject">
-    <input matInput name="objname" [(ngModel)]="singleSelectedObject.label" placeholder="Object Name">
+    <input matInput name="objname" [(ngModel)]="singleSelectedObject.label" (change)="markDirty()" placeholder="Object Name">
 </mat-form-field>
 
 <mat-form-field *ngIf="(singleSelectedObject | type:'Stairs') || (singleSelectedObject | type:'Elevator')">
