Let there be orange!

--- a/src/custom-mat-theme.scss
+++ b/src/custom-mat-theme.scss
@@ -9,7 +9,7 @@
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue.
-$custom-app-primary: mat-palette($mat-teal, 300);
+$custom-app-primary: mat-palette($mat-orange, 300);
 $custom-app-accent:  mat-palette($mat-orange, A400, A200, A700);
 
 // The warn palette is optional (defaults to red).
