--- a/src/app/map-page/map-page.component.css
+++ b/src/app/map-page/map-page.component.css
@@ -16,6 +16,9 @@
     width: 100%;
     background-color: transparent;
     z-index: 0;
+    display: flex;
+    flex-direction: column;
+    min-width: 300px;
 }
 
 .left-sidenav {
